# ndi-webrtc-peer-worker

./: .gitignore  CMakeLists.txt  Dockerfile
cmake/: FindWebRTC.cmake
scripts/: docker-build-linux.sh  docker-create-image-linux.sh
src/: AudioBuffer.cpp  AudioBuffer.h  BaseAudioDeviceModule.cpp  BaseAudioDeviceModule.h  CreateSessionDescriptionObserver.cpp  CreateSessionDescriptionObserver.h  DataChannelObserver.cpp  DataChannelObserver.h  Dispatcher.cpp  Dispatcher.h  NDIReader.cpp  NDIReader.h  NDIWriter.cpp  NDIWriter.h  PeerContext.cpp  PeerContext.h  PeerFactoryContext.cpp  PeerFactoryContext.h  SetSessionDescriptionObserver.cpp  SetSessionDescriptionObserver.h  Signaling.h  StatsCollectorCallback.cpp  StatsCollectorCallback.h  StatsObserver.cpp  StatsObserver.h  ThrottledReporter.cpp  ThrottledReporter.h  VideoDeviceModule.cpp  VideoDeviceModule.h  main.cpp
src/common/: AWorker.cpp  AWorker.h  BaseAudioDeviceModule.cpp  BaseAudioDeviceModule.h  CreateSessionDescriptionObserver.cpp  CreateSessionDescriptionObserver.h  Dispatcher.cpp  Dispatcher.h  FakeAudioDeviceModule.cpp  FakeAudioDeviceModule.h  PeerContext.cpp  PeerContext.h  PeerFactoryContext.cpp  PeerFactoryContext.h  SetSessionDescriptionObserver.cpp  SetSessionDescriptionObserver.h  Signaling.cpp  Signaling.h  VideoCapturer.cpp  VideoCapturer.h  VideoDeviceModule.cpp  VideoDeviceModule.h
src/receiving/: NDIWriter.cpp  ReceivingWorker.cpp  ReceivingWorker.h  RemotePeerContext.cpp  RemotePeerContext.h
src/sending/: LocalPeerContext.cpp  LocalPeerContext.h  NDIReader.cpp  NDIReader.h  SendingWorker.cpp  SendingWorker.h
src/webrtc/: CodecUtils.cpp  CodecUtils.h  CustomDecoderFactory.cpp  CustomDecoderFactory.h  CustomEncoderFactory.cpp  CustomEncoderFactory.h  FFMpegDecoder.cpp  FFMpegDecoder.h  FFmpegVaapiEncode.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.h  FrameRateUpdater.h  H265Decoder.cpp  H265Decoder.h  SoftwareDecoderFactory.cpp  SoftwareDecoderFactory.h  SoftwareEncoderFactory.cpp  SoftwareEncoderFactory.h
src/webrtc/win/: d3dnativeframe.h  mediautils.cc  mediautils.h  msdkvideoencoder.cc  msdkvideoencoder.h
